--- a/_docs/flow-nonflow/2022-7-12 update.md
+++ b/_docs/flow-nonflow/2022-7-12 update.md
@@ -34,10 +34,79 @@ PROBLEM: PCA的principal component到底怎么来的-->具体过程in detail
 
 >2. <font color=NavyBlue>没有识别出flow是不是因为没有把大系统的flow一起加进去？</font><br>-->把PCA-XGboost的训练集中加入Au-Au的flow，看能不能把flow的信息提取出来
 
+原先的：
+![image.png](https://s2.loli.net/2022/07/13/zyoq7BWiRFbpJAa.png)
+
+加一个AuAu的flow进去，看能不能提取出flow的特征？
+* flow: pPb MC-Glauber, pPb TRENTo(2+1), AA TRENTo
+* non_flow: pPb Pythia, pPb HIJING
+![image.png](https://s2.loli.net/2022/07/13/TXM2ZzSxheyKbG9.png)
+![image.png](https://s2.loli.net/2022/07/13/Iax7i4HMuZFrG3P.png)
+<font color=NavyBlue>还是不能鉴别大系统的nonflow</font>
+
+四个训练集，代表四大类事件:
+flow: pPb MC-Glauber, AA TRENTo
+non_flow: pPb Pythia, AA HIJING
+这样才可以鉴别大系统的flow
+![image.png](https://s2.loli.net/2022/07/13/JmQeUg3TbkR5HOZ.png)
+
 PROBLEM: PCA的principal component到底怎么来的-->具体过程in detail
 >3. 搞明白PCA这个section中用的classification的模型是什么-->XGboost
 >4. component的图片具体是什么，把那个特征矩阵的计算写明白
 >5. 原先的那个model,感觉在6th component上的投影，flow跟nonflow还是有一定区别的
     -->画图量化这个区别
 
+训练集:
+* flow: pPb MC-Glauber, pPb TRENTo(2+1)
+* non_flow: pPb Pythia, pPb HIJING
+
+看test dataset在这个方向上的投影，flow跟nonflow是否能做出区分，看上去似乎是不行，纵坐标是投影的平均值。
+
 ![projection on 6th component.png](https://s2.loli.net/2022/07/12/tnzo9jqcw1ZOk5K.png)
+
+![projection on 6th component_all_.png](https://s2.loli.net/2022/07/13/kCV71tEvxNP2MKO.png)
+
+>6. 原先的训练集得到的1st component，test dataset在1st component上的投影，小系统的flow跟nonflow区分明显，但是大系统的flow跟nonflow没有差别
+训练集:
+* flow: pPb MC-Glauber, pPb TRENTo(2+1)
+* non_flow: pPb HIJING,  pPb Pythia
+
+* all
+![pPb_projection on 1st.png](https://s2.loli.net/2022/07/13/htN1naXYb8DjRKE.png)
+
+* small
+![pPb_projection on 1st_small.png](https://s2.loli.net/2022/07/13/fwkcW5uxya6S4AY.png)
+
+* big
+![pPb_projection on 1st_big.png](https://s2.loli.net/2022/07/13/Mzm5qeRgNiUVoB4.png)
+
+>7. 用AA的flow和nonflow训练，看能否提取出flow跟nonflow的信息运用于big & small system?
+
+dataset:
+* flow: AA TRENTo,
+* non_flow: AA HIJING
+
+这个是几个component的样子，看起来第二个比较像collective flow
+![AA_componentspng.png](https://s2.loli.net/2022/07/13/nzafUReVjxOZEqK.png)
+
+所以我们用第二个component去看大小系统的projection
+
+* 小系统的：
+![AA_projection on the 3rd component_small.png](https://s2.loli.net/2022/07/13/4wV5oStYIMHB9RF.png)
+
+* 大系统的：
+![AA_projection on the 3rd component_big.png](https://s2.loli.net/2022/07/13/PSCx2iQ8YdyFH1p.png)
+
+似乎大小系统中flow跟nonflow的界限都挺明确的, 但是训练效果还是不可以解决小系统里面的nonflow问题
+
+>8. 看四种都有的的dataset的训练：
+
+dataset：
+* flow: pPb MC-Glauber, AA TRENTo
+* non_flow: pPb Pythia, AA HIJING
+* 
+![4_all_components.png](https://s2.loli.net/2022/07/13/2gvjibZIh9GdEX5.png)
+
+![4_all_components_small.png](https://s2.loli.net/2022/07/13/NGw89QtVOv2CMA5.png)
+
+![4_all_components_big.png](https://s2.loli.net/2022/07/13/psDM5ASLvluBHdK.png)
