--- a/_docs/flow-nonflow/2022-7-12 update.md
+++ b/_docs/flow-nonflow/2022-7-12 update.md
@@ -35,19 +35,24 @@ PROBLEM: PCA的principal component到底怎么来的-->具体过程in detail
 >2. <font color=NavyBlue>没有识别出flow是不是因为没有把大系统的flow一起加进去？</font><br>-->把PCA-XGboost的训练集中加入Au-Au的flow，看能不能把flow的信息提取出来
 
 原先的：
+
 ![image.png](https://s2.loli.net/2022/07/13/zyoq7BWiRFbpJAa.png)
 
 加一个AuAu的flow进去，看能不能提取出flow的特征？
 * flow: pPb MC-Glauber, pPb TRENTo(2+1), AA TRENTo
 * non_flow: pPb Pythia, pPb HIJING
+*
 ![image.png](https://s2.loli.net/2022/07/13/TXM2ZzSxheyKbG9.png)
+
 ![image.png](https://s2.loli.net/2022/07/13/Iax7i4HMuZFrG3P.png)
+
 <font color=NavyBlue>还是不能鉴别大系统的nonflow</font>
 
 四个训练集，代表四大类事件:
 flow: pPb MC-Glauber, AA TRENTo
 non_flow: pPb Pythia, AA HIJING
 这样才可以鉴别大系统的flow
+
 ![image.png](https://s2.loli.net/2022/07/13/JmQeUg3TbkR5HOZ.png)
 
 PROBLEM: PCA的principal component到底怎么来的-->具体过程in detail
@@ -72,12 +77,15 @@ PROBLEM: PCA的principal component到底怎么来的-->具体过程in detail
 * non_flow: pPb HIJING,  pPb Pythia
 
 * all
+
 ![pPb_projection on 1st.png](https://s2.loli.net/2022/07/13/htN1naXYb8DjRKE.png)
 
 * small
+
 ![pPb_projection on 1st_small.png](https://s2.loli.net/2022/07/13/fwkcW5uxya6S4AY.png)
 
 * big
+
 ![pPb_projection on 1st_big.png](https://s2.loli.net/2022/07/13/Mzm5qeRgNiUVoB4.png)
 
 >7. 用AA的flow和nonflow训练，看能否提取出flow跟nonflow的信息运用于big & small system?
@@ -87,14 +95,17 @@ dataset:
 * non_flow: AA HIJING
 
 这个是几个component的样子，看起来第二个比较像collective flow
+
 ![AA_componentspng.png](https://s2.loli.net/2022/07/13/nzafUReVjxOZEqK.png)
 
 所以我们用第二个component去看大小系统的projection
 
 * 小系统的：
+
 ![AA_projection on the 3rd component_small.png](https://s2.loli.net/2022/07/13/4wV5oStYIMHB9RF.png)
 
 * 大系统的：
+
 ![AA_projection on the 3rd component_big.png](https://s2.loli.net/2022/07/13/PSCx2iQ8YdyFH1p.png)
 
 似乎大小系统中flow跟nonflow的界限都挺明确的, 但是训练效果还是不可以解决小系统里面的nonflow问题
@@ -104,9 +115,13 @@ dataset:
 dataset：
 * flow: pPb MC-Glauber, AA TRENTo
 * non_flow: pPb Pythia, AA HIJING
-* 
+*
 ![4_all_components.png](https://s2.loli.net/2022/07/13/2gvjibZIh9GdEX5.png)
 
+小系统的:
+
 ![4_all_components_small.png](https://s2.loli.net/2022/07/13/NGw89QtVOv2CMA5.png)
+
+大系统的:
 
 ![4_all_components_big.png](https://s2.loli.net/2022/07/13/psDM5ASLvluBHdK.png)
