--- a/_docs/flow-nonflow/2022-7-12 update.md
+++ b/_docs/flow-nonflow/2022-7-12 update.md
@@ -76,17 +76,14 @@ PROBLEM: PCA的principal component到底怎么来的-->具体过程in detail
 * flow: pPb MC-Glauber, pPb TRENTo(2+1)
 * non_flow: pPb HIJING,  pPb Pythia
 
-* all
-
-![pPb_projection on 1st.png](https://s2.loli.net/2022/07/13/htN1naXYb8DjRKE.png)
 
 * small
 
-![pPb_projection on 1st_small.png](https://s2.loli.net/2022/07/13/fwkcW5uxya6S4AY.png)
+![pPb_projection_small.png](https://s2.loli.net/2022/07/13/McdhHIZanGxBL1E.png)
 
 * big
 
-![pPb_projection on 1st_big.png](https://s2.loli.net/2022/07/13/Mzm5qeRgNiUVoB4.png)
+![pPb_projection_big.png](https://s2.loli.net/2022/07/13/lx7OMIK8roXqEmc.png)
 
 >7. 用AA的flow和nonflow训练，看能否提取出flow跟nonflow的信息运用于big & small system?
 
