--- a/_docs/flow-nonflow/2022-7-12 update.md
+++ b/_docs/flow-nonflow/2022-7-12 update.md
@@ -76,6 +76,7 @@ PROBLEM: PCA的principal component到底怎么来的-->具体过程in detail
 * flow: pPb MC-Glauber, pPb TRENTo(2+1)
 * non_flow: pPb HIJING,  pPb Pythia
 
+![pPb_components.png](https://s2.loli.net/2022/07/13/iZqS9QWGElHnzeO.png)
 
 * small
 
